syntax = "proto3";

option go_package = "./pb";

service HandlerUser {
    rpc Create (CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
    string name  = 1;
}

message CreateUserResponse {
    int32 id = 1;
    string name = 2;
}